codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__approval_modal_exec_no_reason.snap
---
source: tui/src/chatwidget/tests.rs
expression: terminal.backend().vt100().screen().contents()
---


  是否允许执行以下命令？

  $ echo hello world

› 1. 是，继续执行 (y)
  2. 是，以后命令以前缀 `echo hello world` 开头时不再询问 (p)
  3. 否，并告知 Codex 应如何调整 (esc)

  按 enter 确认，按 esc 取消
