codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__approval_modal_patch.snap
---
source: tui/src/chatwidget/tests.rs
expression: terminal.backend().vt100().screen().contents()
---


  是否允许进行以下修改？

  原因：The model wants to apply changes

  README.md (+2 -0)

    1 +hello
    2 +world

› 1. 是，继续执行 (y)
  2. 是，这些文件后续不再询问 (a)
  3. 否，并告知 Codex 应如何调整 (esc)

  按 enter 确认，按 esc 取消
