codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__approvals_selection_popup.snap
---
source: tui/src/chatwidget/tests.rs
assertion_line: 3092
expression: popup
---
  更 新 模 型 权 限

› 1. 默 认 （ 当 前 ）   Codex 可 以 读 取 和 编 辑 当 前 工 作 区 中 的 文 件 ， 并 执 行 命 令 。 访 问 互
                   联 网 或 编 辑 其 他 文 件 需 要 审 批 。 （ 与 智 能 体 模 式 相 同 ）
  2. 完 全 访 问       Codex 可 以 编 辑 当 前 工 作 区 之 外 的 文 件 ， 并 在 无 需 审 批 的 情 况 下 访
                   问 互 联 网 。 使 用 时 请 谨 慎 。

  按  enter 确 认 ， 或 按  esc 返 回
